# rpg-game

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: error.rs  main.rs
rpg-game/src/: main.rs
rpg-game/src/core/entity/player/: player.rs  warrior.rs
rpg-game/src/core/entity/weapon/: bow.rs  spear.rs  sword.rs  weapon.rs
rpg-game/src/core/services/: mod.rs
rpg-game/src/core/services/factory/: mod.rs  weapon_factory.rs
server/: Cargo.toml
server/src/: main.rs
server/src/core/: mod.rs
server/src/core/combat/: damage.rs
server/src/core/domain/component/: attribute.rs  mod.rs  movement.rs  skill.rs
server/src/core/entity/: mod.rs
src/: error.rs  main.rs
src/core/: mod.rs
src/core/domain/: mod.rs
src/core/domain/command/: class.rs  mod.rs
src/core/domain/component/: attribute.rs  combat.rs  enemy.rs  mod.rs  movement.rs  render.rs  skill.rs  stat.rs
src/core/domain/entity/: ai.rs  mod.rs  monster.rs  player.rs
src/core/domain/system/: command.rs  common.rs  mod.rs  render.rs
src/core/entity/player/: class.rs  damage.rs  error.rs  mod.rs  player.rs  stat.rs  warrior.rs
src/core/entity/weapon/: bow.rs  error.rs  spear.rs  weapon.rs
src/core/game/: mod.rs
src/core/game/map/: builder.rs
src/core/services/: mod.rs
src/core/services/factory/: mod.rs  weapon_factory.rs
src/core/services/visitor/: mod.rs
visitor-pattern/src/: main.rs
visitor-pattern/src/core/: bow.rs  game_objects.rs  item.rs  mod.rs  player.rs  spear.rs  sword.rs  visitor.rs  warrior.rs  weapon.rs  weapon_factory.rs
(+20 files in other folders)
