[package]
name = "server"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "bevy", "roguelike"]


[dependencies]
tokio = { version = "1.43.0" , features = ["full"] }
lazy_static = "1.5.0"
rand = "0.9.0"
bevy = { version = "0.15.3", features = ["dynamic_linking"] }


[workspace]
resolver = "2"